// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Config Service Service can SAVE the config files with saveToFile or init param 1`] = `
Array [
  "/.env.test.pizza.json",
  Object {
    "$schema": ".schemas/pizza.env.schema.json",
    "toppings": Array [
      "cheese",
    ],
  },
  Object {
    "spaces": 2,
  },
]
`;

exports[`Config Service Service can be forced to be created again 1`] = `
PizzaConfig {
  "NODE_ENV": "test",
  "convert": false,
  "name": "Pizza",
  "saveToFile": false,
  "toppings": Array [
    "cheese",
  ],
}
`;

exports[`Config Service Service can initialize the config files with saveToFile or init param 1`] = `
Array [
  "/.env.test.pizza.json",
  Object {
    "$schema": ".schemas/pizza.env.schema.json",
    "toppings": undefined,
  },
  Object {
    "spaces": 2,
  },
]
`;

exports[`Config Service Service can initialize the config files with saveToFile or init param 2`] = `
Array [
  "/.schemas/pizza.env.schema.json",
  Object {
    "properties": Object {
      "toppings": Object {
        "description": "optional toppings for the pizza",
        "items": Object {
          "enum": Array [
            "cheese",
            "pepperoni",
            "sausage",
          ],
          "type": "string",
        },
        "type": "array",
      },
    },
    "required": Array [],
    "type": "object",
  },
  Object {
    "spaces": 2,
  },
]
`;
